--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap"
 		rel="stylesheet">
+	<script src="./assets/script.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +25,10 @@
 		<div id="banner">
 			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+			<img class="arrow arrow_left" src="/assets/images/arrow_left.png">
+			<img class="arrow arrow_right" src="/assets/images/arrow_right.png">
 			<div class="dots">
+
 			</div>
 		</div>
 		<section id="about-us" class="container">
