--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Print it ! - Impressions d'entreprise</title>
+	<link rel="icon" type="image/svg+xml" href="./assets/images/tricolor-icon.png">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,8 +26,8 @@
 		<div id="banner">
 			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-			<img class="arrow arrow_left" src="/assets/images/arrow_left.png">
-			<img class="arrow arrow_right" src="/assets/images/arrow_right.png">
+			<img class="arrow arrow_left" src="./assets/images/arrow_left.png">
+			<img class="arrow arrow_right" src="./assets/images/arrow_right.png">
 			<div class="dots">
 
 			</div>
